--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:css": "tailwind build src/style.css -o dist/style.css"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oliverbravery/oliverbravery.github.io.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/oliverbravery/oliverbravery.github.io/issues"
   },
   "homepage": "https://github.com/oliverbravery/oliverbravery.github.io#readme",
-  "dependencies": {
+  "devDependencies": {
     "tailwindcss": "^3.1.2"
   }
 }
