--- a/docs/projects.json
+++ b/docs/projects.json
@@ -1,3 +1,3 @@
 [
-    {"title":"Website", "tag":"web", "desc":"The website that you are currently viewing utilising JavaScript, CSS and HTML.", "loc":"https://github.com/oliverbravery/oliverbravery.github.io"}
+    {"title":"Portfolio Website", "tag":"web", "desc":"The website that you are currently viewing utilising JavaScript, CSS and HTML.", "loc":"https://github.com/oliverbravery/oliverbravery.github.io"}
 ]
