Fixed JSON loading

--- a/docs/projects.json
+++ b/docs/projects.json
@@ -1,3 +1,4 @@
 [
-    {"title":"Portfolio Website", "tag":"web", "desc":"The website that you are currently viewing utilising JavaScript, CSS and HTML.", "loc":"https://github.com/oliverbravery/oliverbravery.github.io"}
+    {"projID":"PortfolioWebsite","title":"Portfolio Website", "tag":"web", "desc":"The website that you are currently viewing utilising JavaScript, CSS and HTML.", "loc":"https://github.com/oliverbravery/oliverbravery.github.io"},
+    {"projID":"HexBaronGame","title":"Hex Baron Game", "tag":"game", "desc":"A multiplayer game created using C-Sharp and the Unity game engine.", "loc":"https://u3b.itch.io/hb"}
 ]
